--- a/index.html
+++ b/index.html
@@ -102,6 +102,27 @@
             //         ++i
             // }
 
+        //     function getFromuser(){
+        //     var num=parseInt( prompt());
+        //     while(num%10 !=0){
+        //         var result=num%10;
+        //         num=(num-result)/10;
+        //         console.log(result);
+        //     }
+        // }
+        // getFromuser()
+
+        function gameRandom(){
+            num=Math.floor(Math.random()*100);
+            num2=+print();
+            if(num2>num){
+                console.log(hai);
+            }
+            else{
+                console.log(low);
+            }
+        }
+
             
             
 
